<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:listSelector="@android:color/transparent"
	android:id="@+id/msg_main">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="60dp"
		android:id="@+id/t_m_s_total_out_holder"
		android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:id="@+id/t_m_s_total_out_label_id"
			android:text="@string/t_m_s_total_out_label"
			android:layout_alignParentLeft="true"
			android:textSize="18dp"
			android:layout_alignParentTop="true"
			android:textColor="#FFFFFF"></TextView>
		<TextView
			android:layout_toRightOf="@+id/t_m_s_total_out_label_id"
			android:layout_width="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_height="wrap_content"
			android:text="@string/t_m_s_label"
			android:textColor="#FFFFFF"
			android:textSize="10dp"
			android:layout_alignParentTop="true"></TextView>
		<ImageView
			android:layout_margin="4dp"
			android:layout_width="wrap_content"
			android:layout_alignParentRight="true"
			android:id="@+id/t_m_s_total_out_id"
			android:layout_height="fill_parent"
			android:layout_alignParentTop="true"
			android:src="@drawable/t_m_s_total_out"></ImageView>
		<TextView
			android:layout_toLeftOf="@+id/t_m_s_total_out_id"
			android:layout_width="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:id="@+id/t_m_s_total_out_data_id"
			android:text="@string/t_m_s_total_out_data"
			
			android:layout_alignParentBottom="true"
			android:textColor="#FFFFFF"></TextView>
	</RelativeLayout>
	<include
		layout="@layout/gradient_view_one" />
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="60dp"
		android:id="@+id/t_m_s_total_in_holder"
		android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:id="@+id/t_m_s_total_in_label_id"
			android:text="@string/t_m_s_total_in_label"
			android:layout_alignParentLeft="true"
			android:textSize="18dp"
			android:layout_alignParentTop="true"
			android:textColor="#FFFFFF"></TextView>
		<TextView
			android:layout_toRightOf="@+id/t_m_s_total_in_label_id"
			android:layout_width="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_height="wrap_content"
			android:text="@string/t_m_s_label"
			android:textColor="#FFFFFF"
			android:textSize="10dp"
			android:layout_alignParentTop="true"></TextView>
		<ImageView
			android:layout_margin="4dp"
			android:layout_width="wrap_content"
			android:layout_alignParentRight="true"
			android:id="@+id/t_m_s_total_in_id"
			android:layout_height="fill_parent"
			android:layout_alignParentTop="true"
			android:src="@drawable/t_m_s_total_in"></ImageView>
		<TextView
			android:layout_toLeftOf="@+id/t_m_s_total_in_id"
			android:layout_width="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:id="@+id/t_m_s_total_in_data_id"
			android:text="@string/t_m_s_total_in_data"
			
			android:layout_alignParentBottom="true"
			android:textColor="#FFFFFF"></TextView>
	</RelativeLayout>
	<include
		layout="@layout/gradient_view_one" />
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="60dp"
		android:id="@+id/t_m_m_total_out_holder"
		android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:id="@+id/t_m_m_total_out_label_id"
			android:text="@string/t_m_m_total_out_label"
			android:layout_alignParentLeft="true"
			android:textSize="18dp"
			android:layout_alignParentTop="true"
			android:textColor="#FFFFFF"></TextView>
		<TextView
			android:layout_toRightOf="@+id/t_m_m_total_out_label_id"
			android:layout_width="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_height="wrap_content"
			android:text="@string/t_m_m_label"
			android:textColor="#FFFFFF"
			android:textSize="10dp"
			android:layout_alignParentTop="true"></TextView>
		<ImageView
			android:layout_margin="4dp"
			android:layout_width="wrap_content"
			android:layout_alignParentRight="true"
			android:id="@+id/t_m_m_total_out_id"
			android:layout_height="fill_parent"
			android:layout_alignParentTop="true"
			android:src="@drawable/t_m_m_total_out"></ImageView>
		<TextView
			android:layout_toLeftOf="@+id/t_m_m_total_out_id"
			android:layout_width="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:id="@+id/t_m_m_total_out_data_id"
			android:text="@string/t_m_m_total_out_data"
			
			android:layout_alignParentBottom="true"
			android:textColor="#FFFFFF"></TextView>
	</RelativeLayout>
	<include
		layout="@layout/gradient_view_one" />
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="60dp"
		android:id="@+id/t_m_m_total_in_holder"
		android:padding="5dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:id="@+id/t_m_m_total_in_label_id"
			android:text="@string/t_m_m_total_in_label"
			android:layout_alignParentLeft="true"
			android:textSize="18dp"
			android:layout_alignParentTop="true"
			android:textColor="#FFFFFF"></TextView>
		<TextView
			android:layout_toRightOf="@+id/t_m_m_total_in_label_id"
			android:layout_width="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_height="wrap_content"
			android:text="@string/t_m_m_label"
			android:textColor="#FFFFFF"
			android:textSize="10dp"
			android:layout_alignParentTop="true"></TextView>
		<ImageView
			android:layout_margin="4dp"
			android:layout_width="wrap_content"
			android:layout_alignParentRight="true"
			android:id="@+id/t_m_m_total_in_id"
			android:layout_height="fill_parent"
			android:layout_alignParentTop="true"
			android:src="@drawable/t_m_m_total_in"></ImageView>
		<TextView
			android:layout_toLeftOf="@+id/t_m_m_total_in_id"
			android:layout_width="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_height="wrap_content"
			android:layout_marginRight="4dp"
			android:id="@+id/t_m_m_total_in_data_id"
			android:text="@string/t_m_m_total_in_data"
			
			android:layout_alignParentBottom="true"
			android:textColor="#FFFFFF"></TextView>
	</RelativeLayout>
	<include
		layout="@layout/gradient_view_one" />
</LinearLayout>